<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenArena 2026</string>
    <string name="play">Play</string>
    <string name="import_q3">Import Q3A</string>
    <string name="settings">Settings</string>
    <string name="servers">Servers</string>
    <string name="welcome">OpenArena 2026</string>
    <string name="subtitle">Native Android Client</string>
</resources>
